# otsafe

./: .env  .gitignore  INSTALL.md  README.md  demo.ipynb  docker-compose.yml  otsafe_sbom.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
docker/jenkins/: .gitignore
docker/nginx/: .gitignore  nginx.conf
docker/otsec/: .gitignore  Dockerfile
otsafe/: main.py
otsafe/components/: actuators.py  alarms.py  burners.py  controller.py  controllers.py  dc.py  domain_controllers.py  generic.py  historian.py  historians.py  hmi.py  hmis.py  opc.py  opc_servers.py  pumps.py  safety_systems.py  sensors.py  servers.py  sis.py  valves.py  vessels.py  workstation.py  workstations.py
otsafe/definitions/: 1.yaml
otsafe/demo/: assets.py  demo.ipynb
otsafe/exceptions/: exceptions.py
otsafe/inventory/: __init__.py  db.py  tasks.py
otsafe/utils/: auth.py  listener.py
tests/: actuators_test.py  alarms_test.py  burners_test.py  controllers_test.py  domain_controllers_test.py  generic_test.py  historians_test.py  hmis_test.py  opc_servers_test.py  pumps_test.py  safety_systems_test.py  sensors_test.py  servers_test.py  sis_test.py  valves_test.py  vessels_test.py  workstations_test.py
